[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clifford-torus"
version = "0.1.1"
description = "PyTorch distributions on the Clifford torus (S^1)^d for HRR/VSA-compatible latent spaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mohamed Malek Abid", email = "moabid75@gmail.com" },
]
keywords = ["pytorch", "distributions", "vsa", "hrr", "clifford-torus", "variational-autoencoder"]
dependencies = [
    "torch>=1.10",
]

[project.urls]
Homepage = "https://github.com/momalekabid/clifford-torus"

[tool.setuptools.packages.find]
include = ["clifford_torus*"]
